# atom_rviz_plugin

./: .gitignore  README.md
atom_rviz_plugin/: CMakeLists.txt  README.md  package.xml  plugin_description.xml  setup.py
atom_rviz_plugin/include/atom_rviz_plugin/: calibration_panel.h
atom_rviz_plugin/launch/: rviz.launch
atom_rviz_plugin/launch/mmtbot_collect_data_launch/: collect_data.launch  playbag.launch  rviz_collect.launch  rviz_initial.launch  set_initial_estimate.launch
atom_rviz_plugin/rviz/: panel_plugin.rviz
atom_rviz_plugin/scripts/: call_python.cpp  copy_content_to_yaml.py  test_config_content.yml  test_config_format.yml  test_config_format_scalar.yml  test_out.yml
atom_rviz_plugin/src/: calibration_panel.cpp  config.yml  config_no_comments.yml  data_collect.cpp  optimization_procedure.cpp  plugin_load.cpp  read_write_config.cpp  set_initial_estimate.cpp  test_json_parser.cpp  test_read_param.cpp
atom_rviz_plugin/src/ui/: calibration_panel.ui
calibration/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
calibration/include/calibration/: calibration_panel.h
calibration/launch/: rviz.launch
calibration/rviz/: panel_plugin.rviz
calibration/src/: calibration_panel.cpp
calibration/src/ui/: calibration_panel.ui
new_display/: CMakeLists.txt  package.xml  plugin_description.xml
new_display/include/new_display/: imu_display.h
new_display/src/: imu_display.cpp
new_display/src/ui/: imu_display.ui
