<package format="2">
  <name>atom_rviz_plugin</name>
  <version>1.0.0</version>
  <description>Plugin for ATOM Calibration</description>

  <author email="miguelpina@ua.pt">Miguel Pina</author>
  <maintainer email="miguelpina@ua.pt">Miguel Pina</maintainer>

  <license>Appache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>class_loader</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>rviz</depend>
  <depend>eigen</depend>
  <depend>qtbase5-dev</depend>

  <exec_depend>atom_calibration</exec_depend>
  <exec_depend>atom_msgs</exec_depend>
  <build_depend>atom_calibration</build_depend>
  <build_depend>atom_msgs</build_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
